<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TipCalActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bill_amt"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="2dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:ems="10"
        android:id="@+id/billAmt"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">
        <Button
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:text="@string/ten_percent"
            android:id="@+id/b10Percent"
            android:tag="10"
            android:layout_below="@+id/editText"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:onClick="onTipPercentageButtonClick"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:text="@string/fifteen_percent"
            android:id="@+id/b15Percent"
            android:tag="15"
            android:layout_alignTop="@+id/b10Percent"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/b10Percent"
            android:layout_toEndOf="@+id/b10Percent"
            android:layout_toLeftOf="@+id/b20Percent"
            android:onClick="onTipPercentageButtonClick"
            android:layout_toStartOf="@+id/b20Percent" />

        <Button
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:text="@string/twenty_percent"
            android:id="@+id/b20Percent"
            android:tag="20"
            android:layout_weight="1"
            android:layout_alignTop="@+id/b15Percent"
            android:onClick="onTipPercentageButtonClick"
            android:layout_alignRight="@+id/editText" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_marginTop="113dp"
        android:layout_alignTop="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tip_amt"
            android:id="@+id/label"
            android:layout_weight="1"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:gravity="right"
            android:layout_alignParentStart="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tvTipAmt"
            android:layout_weight="1"
            android:layout_alignTop="@+id/label"
            android:layout_toRightOf="@+id/label"
            android:layout_toEndOf="@+id/label"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

</RelativeLayout>
